fix: Optimizing initialization project structure and delete test.sh

--- a/template/src/assets/styles/views/home.scss
+++ b/template/src/assets/styles/views/home.scss
@@ -1,17 +1,3 @@
-@import "../config.scss";
-@import "../mixin/mixin.scss";
-
-.home {
-  @include border();
-
-  height: 300px;
-  width: calc(100% - 64px);
-  margin: 0 auto;
-  padding: 32px;
-
-  &-title {
-    font-size: 18px;
-    color: $text-color-prompt;
-    margin-bottom: 24px;
-  }
+h2 {
+  color: #1996f9;
 }
