feat($preload): production mode resource preloading

--- a/template/index.html
+++ b/template/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <!-- 360 兼容模式 -->
-    <meta name="renderer" content="ie-stand" />
+    <!-- 360 急速模式 -->
+    <meta name="renderer" content="webkit" />
     <!-- dns 预解析 -->
     <meta http-equiv="x-dns-prefetch-control" content="on" />
     <link rel="dns-prefetch" href="//static2.evente.cn" />
@@ -18,5 +18,7 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <!-- ie edge Safari5 360兼容 360急速兼容模式 显示 -->
+    <script src="https://static2.evente.cn/static/js/warn/warn.20181103.min.js"></script>
   </body>
 </html>
